change text in example template

--- a/flaskr/templates/example.html
+++ b/flaskr/templates/example.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
     <div>
-      <pre><code class="json"> hola </code></pre>
+      <pre> This is an example template </pre>
     </div>
 {% endblock %}
